--- a/ArduinoCar/ArduinoCar/MainPage.xaml
+++ b/ArduinoCar/ArduinoCar/MainPage.xaml
@@ -3,40 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ArduinoCar.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a hovercraft number nine" />
+    <VerticalStackLayout Spacing="30" Padding="30" HorizontalOptions="Center" VerticalOptions="Center">
+        <Label Text="Arduino Car Control" FontSize="30" HorizontalOptions="Center"/>
+        <Grid RowDefinitions="*,*" ColumnDefinitions="Auto,Auto" HorizontalOptions="Center">
+            <Label Text="Linke Kette" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center"/>
+            <Label Text="Rechte Kette" Grid.Row="0" Grid.Column="1" HorizontalOptions="Center"/>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="On"
-                Text="+ 10 Speed" 
-                SemanticProperties.Hint="Turns Arduino Car on"
-                Clicked="On_Clicked"
-                HorizontalOptions="Fill" />
-            <Button
-                x:Name="Off"
-                Text="- 10 Speed"
-                SemanticProperties.Hint="Turns Arduino Car off"
-                Clicked="Off_Clicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+            <ProgressBar x:Name="leftBar" Grid.Row="1" Grid.Column="0" WidthRequest="20" HeightRequest="5"/>
+            <ProgressBar x:Name="rightBar" Grid.Row="1" Grid.Column="1" WidthRequest="20" HeightRequest="5"/>
+        </Grid> 
+    </VerticalStackLayout>
 
 </ContentPage>
