--- a/ArduinoCar/ArduinoCar/MainPage.xaml
+++ b/ArduinoCar/ArduinoCar/MainPage.xaml
@@ -4,14 +4,27 @@
              x:Class="ArduinoCar.MainPage">
 
     <VerticalStackLayout Spacing="30" Padding="30" HorizontalOptions="Center" VerticalOptions="Center">
-        <Label Text="Arduino Car Control" FontSize="30" HorizontalOptions="Center"/>
-        <Grid RowDefinitions="*,*" ColumnDefinitions="Auto,Auto" HorizontalOptions="Center">
+        <Label Text="ArduinoCar Steuerung" FontSize="28" HorizontalOptions="Center" />
+
+
+        <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto" WidthRequest="300">
             <Label Text="Linke Kette" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center"/>
             <Label Text="Rechte Kette" Grid.Row="0" Grid.Column="1" HorizontalOptions="Center"/>
 
-            <ProgressBar x:Name="leftBar" Grid.Row="1" Grid.Column="0" WidthRequest="20" HeightRequest="5"/>
-            <ProgressBar x:Name="rightBar" Grid.Row="1" Grid.Column="1" WidthRequest="20" HeightRequest="5"/>
-        </Grid> 
+            <ProgressBar x:Name="leftBar" Grid.Row="1" Grid.Column="0" HeightRequest="20" HorizontalOptions="FillAndExpand"/>
+            <ProgressBar x:Name="rightBar" Grid.Row="1" Grid.Column="1" HeightRequest="20" HorizontalOptions="FillAndExpand"/>
+        </Grid>
+
+        <Grid RowDefinitions="Auto,Auto,Auto" ColumnDefinitions="Auto,Auto,Auto" ColumnSpacing="20" RowSpacing="20" HorizontalOptions="Center">
+            
+            <Button Grid.Row="0" Grid.Column="1" Text="Vorwärts" Clicked="Forward_Click" WidthRequest="120" HeightRequest="60"/>
+
+            <Button Grid.Row="1" Grid.Column="0" Text="Links" Clicked="Left_Click" WidthRequest="120" HeightRequest="60"/>
+            <Button Grid.Row="1" Grid.Column="1" Text="Stop" Clicked="Stop_Click" WidthRequest="120" HeightRequest="60" BackgroundColor="Red" TextColor="White"/>
+            <Button Grid.Row="1" Grid.Column="2" Text="Rechts" Clicked="Right_Click" WidthRequest="120" HeightRequest="60"/>
+
+            <Button Grid.Row="2" Grid.Column="1" Text="Rückwärts" Clicked="Backward_Click" WidthRequest="120" HeightRequest="60"/>
+        </Grid>
     </VerticalStackLayout>
 
 </ContentPage>
