Added preset Command selector
Sending commands and also sending speed still in Progress

--- a/ArduinoCar/ArduinoCar/MainPage.xaml
+++ b/ArduinoCar/ArduinoCar/MainPage.xaml
@@ -2,29 +2,36 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ArduinoCar.MainPage">
+    <ScrollView>
+        <VerticalStackLayout Spacing="30" Padding="30" HorizontalOptions="Center" VerticalOptions="Center">
+            <Label Text="ArduinoCar Steuerung" FontSize="28" HorizontalOptions="Center" />
 
-    <VerticalStackLayout Spacing="30" Padding="30" HorizontalOptions="Center" VerticalOptions="Center">
-        <Label Text="ArduinoCar Steuerung" FontSize="28" HorizontalOptions="Center" />
 
+            <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto" WidthRequest="300">
+                <Label Text="Linke Kette" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center"/>
+                <Label Text="Rechte Kette" Grid.Row="0" Grid.Column="1" HorizontalOptions="Center"/>
 
-        <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto" WidthRequest="300">
-            <Label Text="Linke Kette" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center"/>
-            <Label Text="Rechte Kette" Grid.Row="0" Grid.Column="1" HorizontalOptions="Center"/>
+                <ProgressBar x:Name="leftBar" Grid.Row="1" Grid.Column="0" HeightRequest="20" HorizontalOptions="FillAndExpand"/>
+                <ProgressBar x:Name="rightBar" Grid.Row="1" Grid.Column="1" HeightRequest="20" HorizontalOptions="FillAndExpand"/>
+            </Grid>
 
-            <ProgressBar x:Name="leftBar" Grid.Row="1" Grid.Column="0" HeightRequest="20" HorizontalOptions="FillAndExpand"/>
-            <ProgressBar x:Name="rightBar" Grid.Row="1" Grid.Column="1" HeightRequest="20" HorizontalOptions="FillAndExpand"/>
-        </Grid>
-
-        <Grid RowDefinitions="Auto,Auto,Auto" ColumnDefinitions="Auto,Auto,Auto" ColumnSpacing="20" RowSpacing="20" HorizontalOptions="Center">
+            <Grid RowDefinitions="Auto,Auto,Auto" ColumnDefinitions="Auto,Auto,Auto" ColumnSpacing="20" RowSpacing="20" HorizontalOptions="Center">
             
-            <Button Grid.Row="0" Grid.Column="1" Text="Vorwärts" Clicked="Forward_Click" WidthRequest="120" HeightRequest="60"/>
+                <Button Grid.Row="0" Grid.Column="1" Text="Vorwärts" Clicked="Forward_Click" WidthRequest="120" HeightRequest="60"/>
 
-            <Button Grid.Row="1" Grid.Column="0" Text="Links" Clicked="Left_Click" WidthRequest="120" HeightRequest="60"/>
-            <Button Grid.Row="1" Grid.Column="1" Text="Stop" Clicked="Stop_Click" WidthRequest="120" HeightRequest="60" BackgroundColor="Red" TextColor="White"/>
-            <Button Grid.Row="1" Grid.Column="2" Text="Rechts" Clicked="Right_Click" WidthRequest="120" HeightRequest="60"/>
+                <Button Grid.Row="1" Grid.Column="0" Text="Links" Clicked="Left_Click" WidthRequest="120" HeightRequest="60"/>
+                <Button Grid.Row="1" Grid.Column="1" Text="Stop" Clicked="Stop_Click" WidthRequest="120" HeightRequest="60" BackgroundColor="Red" TextColor="White"/>
+                <Button Grid.Row="1" Grid.Column="2" Text="Rechts" Clicked="Right_Click" WidthRequest="120" HeightRequest="60"/>
 
-            <Button Grid.Row="2" Grid.Column="1" Text="Rückwärts" Clicked="Backward_Click" WidthRequest="120" HeightRequest="60"/>
-        </Grid>
-    </VerticalStackLayout>
-
+                <Button Grid.Row="2" Grid.Column="1" Text="Rückwärts" Clicked="Backward_Click" WidthRequest="120" HeightRequest="60"/>
+            </Grid>
+            <Picker x:Name="presetPicker" Title="Command Presets">
+                <Picker.Items>
+                    <x:String>Kreis links</x:String>
+                    <x:String>Kreis rechts</x:String>
+                </Picker.Items>
+            </Picker>
+            <Button Text="Send Command" Clicked="SendCommand_Click"/>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
