--- a/ArduinoCar/ArduinoCar/MainPage.xaml
+++ b/ArduinoCar/ArduinoCar/MainPage.xaml
@@ -5,7 +5,9 @@
     <ScrollView>
         <VerticalStackLayout Spacing="30" Padding="30" HorizontalOptions="Center" VerticalOptions="Center">
             <Label Text="ArduinoCar Steuerung" FontSize="28" HorizontalOptions="Center" />
+            <Label x:Name="statusLabel" Text="Verbindung nicht hergestellt" TextColor="Red" HorizontalOptions="Center"/>
 
+            <Button Text="Retry Verbindung" Clicked="Retry_Click" WidthRequest="200"/>
 
             <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto" WidthRequest="300">
                 <Label Text="Linke Kette" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center"/>
@@ -15,8 +17,8 @@
                 <ProgressBar x:Name="rightBar" Grid.Row="1" Grid.Column="1" HeightRequest="20" HorizontalOptions="FillAndExpand"/>
             </Grid>
 
-            <Grid RowDefinitions="Auto,Auto,Auto" ColumnDefinitions="Auto,Auto,Auto" ColumnSpacing="20" RowSpacing="20" HorizontalOptions="Center">
-            
+            <Grid RowDefinitions="Auto,Auto,Auto,Auto" ColumnDefinitions="Auto,Auto,Auto" ColumnSpacing="20" RowSpacing="20" HorizontalOptions="Center">
+
                 <Button Grid.Row="0" Grid.Column="1" Text="Vorwärts" Clicked="Forward_Click" WidthRequest="120" HeightRequest="60"/>
 
                 <Button Grid.Row="1" Grid.Column="0" Text="Links" Clicked="Left_Click" WidthRequest="120" HeightRequest="60"/>
@@ -24,14 +26,10 @@
                 <Button Grid.Row="1" Grid.Column="2" Text="Rechts" Clicked="Right_Click" WidthRequest="120" HeightRequest="60"/>
 
                 <Button Grid.Row="2" Grid.Column="1" Text="Rückwärts" Clicked="Backward_Click" WidthRequest="120" HeightRequest="60"/>
+                <Button Grid.Row="3" Grid.Column="0" Text="Kreis links" Clicked="CircleLeft_Click" WidthRequest="120" HeightRequest="60" HorizontalOptions="FillAndExpand"/>
+
+                <Button Grid.Row="3" Grid.Column="2" Text="Kreis rechts" Clicked="CircleRight_Click" WidthRequest="120" HeightRequest="60" HorizontalOptions="FillAndExpand"/>
             </Grid>
-            <Picker x:Name="presetPicker" Title="Command Presets">
-                <Picker.Items>
-                    <x:String>Kreis links</x:String>
-                    <x:String>Kreis rechts</x:String>
-                </Picker.Items>
-            </Picker>
-            <Button Text="Send Command" Clicked="SendCommand_Click"/>
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
