--- a/ArduinoCar2/MainWindow.xaml
+++ b/ArduinoCar2/MainWindow.xaml
@@ -8,51 +8,59 @@
         Title="Arduino Steuerung" Height="450" Width="800"
         PreviewKeyDown="Window_KeyDown" PreviewKeyUp="Window_KeyUp">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <StackPanel Margin="30" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="drivePanel" Visibility="Visible">
-            <TextBlock Text="ArduinoCar Steuerung" FontSize="28" HorizontalAlignment="Center" Margin="0 0 0 20"/>
-            <TextBlock x:Name="statusLabel" Text="Verbindung nicht hergestellt" Foreground="Red" HorizontalAlignment="Center" Margin="0 0 0 20"/>
-            <Button Content="Retry Verbindung" Width="200" Click="Retry_Click" Margin="0 0 0 20"/>
-            <Button Content="Show plan" Width="100" Click="ShowPanel_Click"/>
+        <Grid>
+            <StackPanel Margin="30" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="drivePanel" Visibility="Visible">
+                <TextBlock Text="ArduinoCar Steuerung" FontSize="28" HorizontalAlignment="Center" Margin="0 0 0 20"/>
+                <TextBlock x:Name="statusLabel" Text="Verbindung nicht hergestellt" Foreground="Red" HorizontalAlignment="Center" Margin="0 0 0 20"/>
+                <Button Content="Retry Verbindung" Width="200" Click="Retry_Click" Margin="0 0 0 20"/>
+                <Button Content="Show plan" Width="100" Click="ShowPanel_Click"/>
 
-            <Grid Width="300">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
+                <Grid Width="300">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
 
-                <TextBlock Text="Linke Kette" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center"/>
-                <TextBlock Text="Rechte Kette" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center"/>
-                <ProgressBar x:Name="leftBar" Grid.Row="1" Grid.Column="0" Height="20" Margin="5"/>
-                <ProgressBar x:Name="rightBar" Grid.Row="1" Grid.Column="1" Height="20" Margin="5"/>
+                    <TextBlock Text="Linke Kette" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center"/>
+                    <TextBlock Text="Rechte Kette" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center"/>
+                    <ProgressBar x:Name="leftBar" Grid.Row="1" Grid.Column="0" Height="20" Margin="5"/>
+                    <ProgressBar x:Name="rightBar" Grid.Row="1" Grid.Column="1" Height="20" Margin="5"/>
 
-            </Grid>
-            <Grid Margin="0 20 0 0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <Button Grid.Row="0" Grid.Column="1" Content="Vorwärts" Width="120" Height="60" Click="Forward_Click"/>
-                <Button Grid.Row="1" Grid.Column="0" Content="Links" Width="120" Height="60" Click="Left_Click"/>
-                <Button Grid.Row="1" Grid.Column="1" Content="Stop" Width=" 120" Height="60" Click="Stop_Click"/>
-                <Button Grid.Row="1" Grid.Column="2" Content="Rechts" Width="120" Height="60" Click="Right_Click"/>
-                <Button Grid.Row="2" Grid.Column="1" Content="Rückwärts" Width="120" Height="60" Click="Backward_Click"/>
-                <Button Grid.Row="3" Grid.Column="0" Content="Kreis links" Width="120" Height="60" Click="CircleLeft_Click"/>
-                <Button Grid.Row="3" Grid.Column="2" Content="Kreis rechts" Width="120" Height="60" Click="CircleRight_Click"/>
-            </Grid>
-        </StackPanel>
-        <!--<StackPanel Margin="30" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="layoutPanel" Visibility="Hidden">
-            <Button x:Name="btn1" Content="Click me!" HorizontalAlignment="Center" VerticalAlignment="Center" Click="btn1_Click"/>
-        </StackPanel> -->
+                </Grid>
+                <Grid Margin="0 20 0 0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Row="0" Grid.Column="1" Content="Vorwärts" Width="120" Height="60" Click="Forward_Click"/>
+                    <Button Grid.Row="1" Grid.Column="0" Content="Links" Width="120" Height="60" Click="Left_Click"/>
+                    <Button Grid.Row="1" Grid.Column="1" Content="Stop" Width=" 120" Height="60" Click="Stop_Click"/>
+                    <Button Grid.Row="1" Grid.Column="2" Content="Rechts" Width="120" Height="60" Click="Right_Click"/>
+                    <Button Grid.Row="2" Grid.Column="1" Content="Rückwärts" Width="120" Height="60" Click="Backward_Click"/>
+                    <Button Grid.Row="3" Grid.Column="0" Content="Kreis links" Width="120" Height="60" Click="CircleLeft_Click"/>
+                    <Button Grid.Row="3" Grid.Column="2" Content="Kreis rechts" Width="120" Height="60" Click="CircleRight_Click"/>
+                </Grid>
+            </StackPanel>
+            <StackPanel Margin="30" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="planPanel" Visibility="Collapsed">
+                <TextBlock Text="Ablauf-Planner" FontSize="28" HorizontalAlignment="Center" Margin="0 0 0 20"/>
+                <Button x:Name="btn1" Content="Zurück zur Steuerung" Width="200" Margin="0 0 0 20" Click="BackToDrive_Click"/>
+                <Button Content="Plan starten" Width="160" Margin="10" Click="StartPlan_Click"/>
+                <Button Content="Zustand hinzufügen" Width="160" Margin="0 10 0 10" Click="AddState_Click"/>
+                <Canvas x:Name="stateCanvas" Background="#333" Height="600" Width="900" Margin="20"/>
+
+            </StackPanel>
+
+        </Grid>
     </ScrollViewer>
 </Window>
