--- a/ArduinoCar2/MainWindow.xaml
+++ b/ArduinoCar2/MainWindow.xaml
@@ -53,11 +53,28 @@
                 </Grid>
             </StackPanel>
             <StackPanel Margin="30" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="planPanel" Visibility="Collapsed">
-                <TextBlock Text="Ablauf-Planner" FontSize="28" HorizontalAlignment="Center" Margin="0 0 0 20"/>
-                <Button x:Name="btn1" Content="Zurück zur Steuerung" Width="200" Margin="0 0 0 20" Click="BackToDrive_Click"/>
-                <Button Content="Plan starten" Width="160" Margin="10" Click="StartPlan_Click"/>
-                <Button Content="Zustand hinzufügen" Width="160" Margin="0 10 0 10" Click="AddState_Click"/>
-                <Canvas x:Name="stateCanvas" Background="#333" Height="600" Width="900" Margin="20"/>
+                <Button Content="Zurück zur Fahransicht" Width="120" Click="BackToDrive_Click"/>
+
+                <Button Content="➕ Zustand"
+            Width="120"
+            Click="AddState_Click"/>
+
+                <Button Content="❌ Löschen"
+            Width="120"
+            Margin="10,0"
+            Click="DeleteState_Click"/>
+
+                <Button Content="▶ Start"
+            Width="120"
+            Click="StartPlan_Click"/>
+                <DataGrid x:Name="stateGrid" AutoGenerateColumns="False" CanUserAddRows="False" SelectionMode="Single" CellEditEnding="StateGrid_CellEditEnding" Margin="10" Height="250">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="#" Binding="{Binding Index}" IsReadOnly="True" Width="40"/>
+                        <DataGridComboBoxColumn Header="Aktion" SelectedItemBinding="{Binding Action, Mode=TwoWay}" ItemsSource="{Binding Source={x:Static local:EnumExtensions.GetStateActions}}" Width="80"/>
+                        <DataGridTextColumn Header="Wert" Binding="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="80"/>
+                        <DataGridComboBoxColumn Header="Einheit"  SelectedItemBinding="{Binding Unit, Mode=TwoWay}" ItemsSource="{Binding Source={x:Static local:EnumExtensions.GetStateUnits}}" Width="180"/>
+                    </DataGrid.Columns>
+                </DataGrid>
 
             </StackPanel>
 
