--- a/ArduinoCar2/MainWindow.xaml
+++ b/ArduinoCar2/MainWindow.xaml
@@ -5,79 +5,83 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ArduinoCar2"
         mc:Ignorable="d"
-        Title="Arduino Steuerung" Height="450" Width="800"
+        Title="Arduino Steuerung" Height="650" Width="800"
         PreviewKeyDown="Window_KeyDown" PreviewKeyUp="Window_KeyUp">
-    <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <Grid>
-            <StackPanel Margin="30" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="drivePanel" Visibility="Visible">
-                <TextBlock Text="ArduinoCar Steuerung" FontSize="28" HorizontalAlignment="Center" Margin="0 0 0 20"/>
-                <TextBlock x:Name="statusLabel" Text="Verbindung nicht hergestellt" Foreground="Red" HorizontalAlignment="Center" Margin="0 0 0 20"/>
-                <Button Content="Retry Verbindung" Width="200" Click="Retry_Click" Margin="0 0 0 20"/>
-                <Button Content="Show plan" Width="100" Click="ShowPanel_Click"/>
+    <Grid>
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <Grid>
+                <StackPanel Margin="30" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="drivePanel" Visibility="Visible">
+                    <TextBlock Text="ArduinoCar Steuerung" FontSize="28" HorizontalAlignment="Center" Margin="0 0 0 20"/>
+                    <TextBlock x:Name="statusLabel" Text="Verbindung nicht hergestellt" Foreground="Red" HorizontalAlignment="Center" Margin="0 0 0 20"/>
+                    <Button Content="Retry Verbindung" Width="200" Click="Retry_Click" Margin="0 0 0 20"/>
+                    <Button Content="Show plan" Width="100" Click="ShowPanel_Click"/>
 
-                <Grid Width="300">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
+                    <Grid Width="300">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
 
-                    <TextBlock Text="Linke Kette" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center"/>
-                    <TextBlock Text="Rechte Kette" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center"/>
-                    <ProgressBar x:Name="leftBar" Grid.Row="1" Grid.Column="0" Height="20" Margin="5"/>
-                    <ProgressBar x:Name="rightBar" Grid.Row="1" Grid.Column="1" Height="20" Margin="5"/>
+                        <TextBlock Text="Linke Kette" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center"/>
+                        <TextBlock Text="Rechte Kette" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center"/>
+                        <ProgressBar x:Name="leftBar" Grid.Row="1" Grid.Column="0" Height="20" Margin="5"/>
+                        <ProgressBar x:Name="rightBar" Grid.Row="1" Grid.Column="1" Height="20" Margin="5"/>
 
-                </Grid>
-                <Grid Margin="0 20 0 0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Row="0" Grid.Column="1" Content="Vorwärts" Width="120" Height="60" Click="Forward_Click"/>
-                    <Button Grid.Row="1" Grid.Column="0" Content="Links" Width="120" Height="60" Click="Left_Click"/>
-                    <Button Grid.Row="1" Grid.Column="1" Content="Stop" Width=" 120" Height="60" Click="Stop_Click"/>
-                    <Button Grid.Row="1" Grid.Column="2" Content="Rechts" Width="120" Height="60" Click="Right_Click"/>
-                    <Button Grid.Row="2" Grid.Column="1" Content="Rückwärts" Width="120" Height="60" Click="Backward_Click"/>
-                    <Button Grid.Row="3" Grid.Column="0" Content="Kreis links" Width="120" Height="60" Click="CircleLeft_Click"/>
-                    <Button Grid.Row="3" Grid.Column="2" Content="Kreis rechts" Width="120" Height="60" Click="CircleRight_Click"/>
-                </Grid>
-            </StackPanel>
-            <StackPanel Margin="30" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="planPanel" Visibility="Collapsed">
-                <Button Content="Zurück zur Fahransicht" Width="120" Click="BackToDrive_Click"/>
+                    </Grid>
+                    <Grid Margin="0 20 0 0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Row="0" Grid.Column="1" Content="Vorwärts" Width="120" Height="60" Click="Forward_Click"/>
+                        <Button Grid.Row="1" Grid.Column="0" Content="Links" Width="120" Height="60" Click="Left_Click"/>
+                        <Button Grid.Row="1" Grid.Column="1" Content="Stop" Width=" 120" Height="60" Click="Stop_Click"/>
+                        <Button Grid.Row="1" Grid.Column="2" Content="Rechts" Width="120" Height="60" Click="Right_Click"/>
+                        <Button Grid.Row="2" Grid.Column="1" Content="Rückwärts" Width="120" Height="60" Click="Backward_Click"/>
+                        <Button Grid.Row="3" Grid.Column="0" Content="Kreis links" Width="120" Height="60" Click="CircleLeft_Click"/>
+                        <Button Grid.Row="3" Grid.Column="2" Content="Kreis rechts" Width="120" Height="60" Click="CircleRight_Click"/>
+                    </Grid>
+                </StackPanel>
+                <StackPanel Margin="30" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="planPanel" Visibility="Collapsed">
+                    <Button Content="Zurück zur Fahransicht" Margin="5" Width="150" FontWeight="Bold" Click="BackToDrive_Click"/>
 
-                <Button Content="➕ Zustand"
-            Width="120"
-            Click="AddState_Click"/>
+                    <Button Content="Zustand hinzufügen" Margin="10" Width="120" Click="AddState_Click"/>
 
-                <Button Content="❌ Löschen"
-            Width="120"
-            Margin="10,0"
-            Click="DeleteState_Click"/>
+                    <Button Content="Löschen" Width="120" Margin="10,0" Click="DeleteState_Click"/>
 
-                <Button Content="▶ Start"
-            Width="120"
-            Click="StartPlan_Click"/>
-                <DataGrid x:Name="stateGrid" AutoGenerateColumns="False" CanUserAddRows="False" SelectionMode="Single" CellEditEnding="StateGrid_CellEditEnding" Margin="10" Height="250">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="#" Binding="{Binding Index}" IsReadOnly="True" Width="40"/>
-                        <DataGridComboBoxColumn Header="Aktion" SelectedItemBinding="{Binding Action, Mode=TwoWay}" ItemsSource="{Binding Source={x:Static local:EnumExtensions.GetStateActions}}" Width="80"/>
-                        <DataGridTextColumn Header="Wert" Binding="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="80"/>
-                        <DataGridComboBoxColumn Header="Einheit"  SelectedItemBinding="{Binding Unit, Mode=TwoWay}" ItemsSource="{Binding Source={x:Static local:EnumExtensions.GetStateUnits}}" Width="180"/>
-                    </DataGrid.Columns>
-                </DataGrid>
+                    <Button Content="Plan Starten" Margin="10" Width="120" Click="StartPlan_Click"/>
+                    <DataGrid x:Name="stateGrid" AutoGenerateColumns="False" CanUserAddRows="False" SelectionMode="Single" CellEditEnding="StateGrid_CellEditEnding" Margin="10" Height="250">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="#" Binding="{Binding Index}" IsReadOnly="True" Width="40"/>
+                            <DataGridComboBoxColumn Header="Aktion" SelectedItemBinding="{Binding Action, Mode=TwoWay}" ItemsSource="{Binding Source={x:Static local:EnumExtensions.GetStateActions}}" Width="80"/>
+                            <DataGridTextColumn Header="Wert" Binding="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="80"/>
+                            <DataGridComboBoxColumn Header="Einheit"  SelectedItemBinding="{Binding Unit, Mode=TwoWay}" ItemsSource="{Binding Source={x:Static local:EnumExtensions.GetStateUnits}}" Width="180"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
 
-            </StackPanel>
+                </StackPanel>
 
+            </Grid>
+        </ScrollViewer>
+        <Grid x:Name="helpPanel" Background="White" Visibility="Collapsed" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <ScrollViewer Margin="50">
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBox x:Name="helpTextBox" TextWrapping="Wrap" Background="White" Foreground="Black" FontSize="14" IsReadOnly="True" BorderThickness="0" MinHeight="200" MinWidth="300"/>
+                    <Button Content="Schließen" Width="100" Margin="0 10 0 0" HorizontalAlignment="Center" Click="CloseHelp_Click"/>
+                </StackPanel>
+            </ScrollViewer>
         </Grid>
-    </ScrollViewer>
+        <Button Content="?" Width="32" Height="32" FontSize="16" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20 10 30 0" Click="Help_Click"/>
+    </Grid>
 </Window>
