--- a/ArduinoCar2/MainWindow.xaml
+++ b/ArduinoCar2/MainWindow.xaml
@@ -7,15 +7,17 @@
         mc:Ignorable="d"
         Title="Arduino Steuerung" Height="650" Width="800"
         PreviewKeyDown="Window_KeyDown" PreviewKeyUp="Window_KeyUp">
-    <Grid>
+    <Grid> <!-- Hauptgrid -->
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <Grid>
+                <!-- Fahrsteuerung Panel -->
                 <StackPanel Margin="30" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="drivePanel" Visibility="Visible">
                     <TextBlock Text="ArduinoCar Steuerung" FontSize="28" HorizontalAlignment="Center" Margin="0 0 0 20"/>
                     <TextBlock x:Name="statusLabel" Text="Verbindung nicht hergestellt" Foreground="Red" HorizontalAlignment="Center" Margin="0 0 0 20"/>
                     <Button Content="Retry Verbindung" Width="200" Click="Retry_Click" Margin="0 0 0 20"/>
                     <Button Content="Show plan" Width="100" Click="ShowPanel_Click"/>
 
+                    <!-- Grid für die Progressbar -->
                     <Grid Width="300">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
@@ -30,8 +32,9 @@
                         <TextBlock Text="Rechte Kette" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center"/>
                         <ProgressBar x:Name="leftBar" Grid.Row="1" Grid.Column="0" Height="20" Margin="5"/>
                         <ProgressBar x:Name="rightBar" Grid.Row="1" Grid.Column="1" Height="20" Margin="5"/>
-
                     </Grid>
+                    
+                    <!-- Steuerbuttons -->
                     <Grid Margin="0 20 0 0">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -53,6 +56,8 @@
                         <Button Grid.Row="3" Grid.Column="2" Content="Kreis rechts" Width="120" Height="60" Click="CircleRight_Click"/>
                     </Grid>
                 </StackPanel>
+                
+                <!-- Planer Panel -->
                 <StackPanel Margin="30" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="planPanel" Visibility="Collapsed">
                     <Button Content="Zurück zur Fahransicht" Margin="5" Width="150" FontWeight="Bold" Click="BackToDrive_Click"/>
 
@@ -61,6 +66,8 @@
                     <Button Content="Löschen" Width="120" Margin="10,0" Click="DeleteState_Click"/>
 
                     <Button Content="Plan Starten" Margin="10" Width="120" Click="StartPlan_Click"/>
+                    
+                    <!-- DataGrid für Zustände -->
                     <DataGrid x:Name="stateGrid" AutoGenerateColumns="False" CanUserAddRows="False" SelectionMode="Single" CellEditEnding="StateGrid_CellEditEnding" Margin="10" Height="250">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="#" Binding="{Binding Index}" IsReadOnly="True" Width="40"/>
@@ -74,6 +81,8 @@
 
             </Grid>
         </ScrollViewer>
+        
+        <!-- Hilfe-Panel -->
         <Grid x:Name="helpPanel" Background="White" Visibility="Collapsed" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <ScrollViewer Margin="50">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -82,6 +91,7 @@
                 </StackPanel>
             </ScrollViewer>
         </Grid>
+        <!-- Hilfe-Button -->
         <Button Content="?" Width="32" Height="32" FontSize="16" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20 10 30 0" Click="Help_Click"/>
     </Grid>
 </Window>
